<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:digits="@string/name_characters_allowed"
        android:padding="10dp"
        android:maxLength="17"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/enter_your_phone"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="175dp"
        android:layout_height="109dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/go_backward"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>