<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:background="@color/colorBackground"
        android:hint="@string/name_show"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorBackground"
        android:hint="@string/phone_show"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <Button
        android:id="@+id/buttonGoForward"
        android:layout_width="168dp"
        android:layout_height="85dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/go_forward"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>
